--- a/trunk/integration1/.project
+++ b/trunk/integration1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>springeip-setup</name>
+	<name>integration1</name>
 	<comment>This project is a simple template for a jar utility using Spring.
   </comment>
 	<projects>
