--- a/integration1/pom.xml
+++ b/integration1/pom.xml
@@ -5,9 +5,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.wordpress.springeip.setup</groupId>
 	<version>1.0.0.SNAPSHOT</version>
-	<artifactId>springeip-setup</artifactId>
+	<artifactId>integration1</artifactId>
 	<packaging>jar</packaging>
-	<name>springeip-setup</name>
+	<name>integration1</name>
 	<url>http://springeip.wordpress.com</url>
 	<properties>
 		<spring.framework.version>3.0.3.RELEASE</spring.framework.version>
