--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>springeip-setup</module>
     <module>integration1</module>
     <module>integration2</module>
+    <module>crm-example</module>
   </modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
