--- a/trunk/crm-example/pom.xml
+++ b/trunk/crm-example/pom.xml
@@ -6,6 +6,7 @@
 		<groupId>com.wordpress.springeip</groupId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
+	<packaging>pom</packaging>
 	<artifactId>crm-example</artifactId>
 	<name>crm-example</name>
 </project>
