--- a/crm-example/crm/pom.xml
+++ b/crm-example/crm/pom.xml
@@ -15,7 +15,7 @@
 				<artifactId>maven-jetty-plugin</artifactId>
 				<version>6.1.18</version>
 				<configuration>
-					<scanIntervalSeconds>10</scanIntervalSeconds>
+					<scanIntervalSeconds>120</scanIntervalSeconds>
 					<contextPath>/</contextPath>
 				</configuration>
 				<dependencies>
@@ -48,6 +48,10 @@
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-mail</artifactId>
 		</dependency>
 	</dependencies>
 </project>
