--- a/crm-example/crm/src/main/resources/applicationContext.properties
+++ b/crm-example/crm/src/main/resources/applicationContext.properties
@@ -1,4 +1,4 @@
 # Confirmation e-mail configuration. You can leave this as-is if you like
-conf.email.from=Online University <noreply@onlineuniversity.edu>
-conf.email.subject=Thank you for your inquiry
-conf.email.text=Thank you for your inquiry. We will contact you shortly.
+crm.conf.email.from=Online University <noreply@onlineuniversity.edu>
+crm.conf.email.subject=Thank you for your inquiry
+crm.conf.email.text=Thank you for your inquiry. We will contact you shortly.
