--- a/trunk/crm-example/crm/pom.xml
+++ b/trunk/crm-example/crm/pom.xml
@@ -9,6 +9,18 @@
 	<artifactId>crm</artifactId>
 	<name>crm</name>
 	<build>
+		<testResources>
+			<testResource>
+				<directory>src/test/java</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</testResource>
+			<testResource>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
+			</testResource>
+		</testResources>
 		<plugins>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
