--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -19,7 +19,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.framework.version>3.0.3.RELEASE</spring.framework.version>
-		<spring.integration.version>1.0.4.RELEASE</spring.integration.version>
+		<spring.integration.version>2.0.0.M5</spring.integration.version>
 		<servlet.version>2.5</servlet.version>
 		<jstl.version>1.2</jstl.version>
 		<mail.version>1.4.1</mail.version>
