--- a/trunk/crm-example/crm/pom.xml
+++ b/trunk/crm-example/crm/pom.xml
@@ -42,6 +42,11 @@
 		</plugins>
 	</build>
 	<dependencies>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>crm-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<!-- Java/JEE dependencies -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
