--- a/trunk/crm-example/crm/pom.xml
+++ b/trunk/crm-example/crm/pom.xml
@@ -70,5 +70,29 @@
 			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-mail</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jms</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-jms</artifactId>
+		</dependency>
+    <dependency>
+            <groupId>javax.jms</groupId>
+            <artifactId>com.springsource.javax.jms</artifactId>
+        </dependency>
+    <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>com.springsource.org.apache.activemq</artifactId>
+        </dependency>
+    <dependency>
+            <groupId>org.apache.xbean</groupId>
+            <artifactId>com.springsource.org.apache.xbean.spring</artifactId>
+        </dependency>
+    <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>com.springsource.javax.management.j2ee</artifactId>
+        </dependency>
 	</dependencies>
 </project>
